# TCSM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TCSM.sln
.github/workflows/: iwyu.yml  windows.yml
Dependencies/: CMakeLists.txt  x86RetSpoof.h
Dependencies/MinHook/: CMakeLists.txt
Dependencies/freetype/: CMakeLists.txt
Dependencies/imgui/: CMakeLists.txt
Source/: CMakeLists.txt  Config.cpp  GUI.cpp  GlobalContext.cpp  TCSM.vcxproj  TCSM.vcxproj.filters
Source/CSGO/: CMakeLists.txt
Source/Hacks/: CMakeLists.txt  Misc.cpp
Source/Helpers/: CMakeLists.txt  PatternNotFoundHandler.cpp
Source/Hooks/: CMakeLists.txt
Source/Interfaces/: InterfaceFinderWithLog.h
Source/InventoryChanger/: CMakeLists.txt  README.md
Source/InventoryChanger/Backend/: CMakeLists.txt
Source/InventoryChanger/GameIntegration/: CMakeLists.txt
Source/InventoryChanger/GameItems/: CMakeLists.txt
Source/InventoryChanger/Inventory/: CMakeLists.txt
Source/InventoryChanger/ItemGenerator/: CMakeLists.txt
Source/MemorySearch/: CMakeLists.txt
Source/RetSpoof/: CMakeLists.txt
Tests/: CMakeLists.txt
docs/: CNAME  _config.yml  index.html  index.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/assets/css/: style.css  style.scss
